<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant_bg"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:shadowColor="@android:color/black"
            android:shadowDx="6"
            android:shadowDy="6"
            android:shadowRadius="3"
            android:text="@string/restaurants"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textFontWeight="6"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnMaps"
                android:drawableTop="@drawable/ic_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:lineSpacingExtra="6dp"
                android:padding="12dp"
                android:text="@string/find_restaurants"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_info_outline_48dp"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/about"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_help_outline_48dp"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/help"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>