<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_info_outline_48dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:maxLines="1"
            android:padding="6dp"
            android:text="@string/about"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:background="@drawable/icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Restaurant Locator"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="version 1.0 \n © 2019 \n\n by :"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="161111034 - Arunseto Pambudi"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="supported by :"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="italic" />

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/stiki" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sekolah Tinggi Informatika dan Komputer Indonesia"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jl. Raya Tidar no 100 Malang"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stiki"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
